cmake_minimum_required(VERSION 3.20)
project(11M22D)

set(CMAKE_CXX_STANDARD 14)


add_executable(palindrome palindrome.cpp)
add_executable(simulation simulation.cpp)
add_executable(sweep sweep.cpp)
add_executable(find_toy find_toy.cpp)
add_executable(highPrecision highPrecision.cpp)
add_executable(factorial factorial.cpp)
add_executable(sorted sorted.cpp)
add_executable(QuickSorted QuickSorted.cpp)
add_executable(nth_element nth_element.cpp)