cmake_minimum_required(VERSION 3.20)
project(12M3D)

set(CMAKE_CXX_STANDARD 14)
add_executable(findPaper findPaper.cpp)
add_executable(food food.cpp)
add_executable(equation equation.cpp)
add_executable(lineTree lineTree.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(BuildRoads  "BuildRoads .cpp")
add_executable(cityWay cityWay.cpp)
add_executable(net net.cpp)
add_executable(communicate communicate.cpp)
add_executable(farm farm.cpp)
add_executable(draw draw.cpp)