cmake_minimum_required(VERSION 3.21)
project(12M5D)

set(CMAKE_CXX_STANDARD 11)
add_executable(template template.cpp)
add_executable(floyd floyd.cpp)
add_executable(yacht yacht.cpp)
add_executable(cowpath cowpath.cpp)
add_executable(cowpathfloyd cowpathfloyd.cpp)
add_executable(Heat Heat.cpp)
add_executable(mth_element mth_element.cpp)
add_executable(attack attack.cpp)
add_executable(priority_queue priority_queue.h minlongest.cpp)
add_executable(test test.cpp)
add_executable(jojo4 jojo4.cpp)
add_executable(money money.cpp)
add_executable(strongest strongest.cpp)
add_executable(minlong minlong.cpp)