cmake_minimum_required(VERSION 3.20)
project(dp)

set(CMAKE_CXX_STANDARD 11)

add_executable(escape escape.cpp)
add_executable(flower flower.cpp)
add_executable(flower_db flower_dp.cpp)
add_executable(h91 h91.cpp)
add_executable(h92 other.cpp)
add_executable(isBst isBst.cpp)
add_executable(capitalists capitalists.cpp)
add_executable(redundantWay redundantWay.cpp)
add_executable(shopping shopping.cpp)
add_executable(shopping_dp shopping_dp.cpp)
add_executable(enjoy_flower enjoy_flower.cpp)
add_executable(horse horse.cpp)
add_executable(shortestWay shortestWay.cpp)
add_executable(findPeople findPeople.cpp)
add_executable(herbalism herbalism.cpp)
add_executable(box box.cpp)