cmake_minimum_required(VERSION 3.20)
project(greedy)

set(CMAKE_CXX_STANDARD 11)

add_executable(greedy maxArea.cpp )

add_executable(longestPalindrome longestPalindrome.cpp)
add_executable(maxBinTree maxBinTree.cpp)
add_executable(maxWay maxWay.cpp)
add_executable(treasure treasure.cpp)
add_executable(water water.cpp)
add_executable(activity activity.cpp)
add_executable(miniNum miniNum.cpp)
add_executable(preorder preorder.cpp)